@@ -13,14 +13,12 @@ if(!$modx->hasPermission('edit_module')) {
 	<meta http-equiv="Content-Type" content="text/html; charset=<?php echo $modx_charset; ?>" />
 	<link rel="stylesheet" type="text/css" href="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>style.css<?php echo "?$theme_refresher";?>" />
 	<script type="text/javascript">var MODX_MEDIA_PATH = "<?php echo IN_MANAGER_MODE ? "media":"manager/media"; ?>";</script>
-	<script type="text/javascript" language="JavaScript" src="media/script/modx.js"></script>
 	<script type="text/javascript" language="JavaScript">
 		document.setIncludePath("media/tvscripts/");
 		document.addEventListener("oninit",function() { 
 			document.include("dynelement");
 		})
 	</script>	
-	<script type="text/javascript" language="JavaScript" src="media/script/cb2.js"></script>
 <?php
 if($_SESSION['browser']=='ie') {
 ?>   
